--- a/sass/adminIndex.scss
+++ b/sass/adminIndex.scss
@@ -22,20 +22,45 @@
 
     #information {
         padding: 20px;
+        
 
         h1 {
+            color: #ffffff;
             text-align: center;
-            color: #fff;
             letter-spacing: .5px;
             user-select: none;
         }
         
         p {
+            font-size: .95rem;
+            margin: 0 0 20px 0;
+            color: #ffffff;
             text-align: center;
-            color: #fff;
             line-height: 20px;
             letter-spacing: .5px;
             user-select: none;
+        }
+
+        #logoutButtonWrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            #logoutButton {
+                font-size: .95rem;
+                color: #ffffff;
+                padding: 15px;
+                border: 1px solid #fff;
+                border-radius: 3px;
+                transition: .3s;
+    
+                &:hover,
+                &:active {
+                    background: #fff;
+                    border-color: #fff;
+                    color: #000;
+                }
+            }
         }
     }
 }
