--- a/admin/views/sass/index.scss
+++ b/admin/views/sass/index.scss
@@ -5,7 +5,7 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    background-image: url('../media/adminIndexBackground.jpg');
+    background-image: url('../img/index.jpg');
     background-position: center;
     background-color: #000;
     background-size: cover;
@@ -39,28 +39,6 @@
             line-height: 20px;
             letter-spacing: .5px;
             user-select: none;
-        }
-
-        #logoutButtonWrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            #logoutButton {
-                font-size: .95rem;
-                color: #ffffff;
-                padding: 15px;
-                border: 1px solid #fff;
-                border-radius: 3px;
-                transition: .3s;
-    
-                &:hover,
-                &:active {
-                    background: #fff;
-                    border-color: #fff;
-                    color: #000;
-                }
-            }
         }
     }
 }
