--- a/admin/views/sass/register.scss
+++ b/admin/views/sass/register.scss
@@ -6,21 +6,9 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-
-    #background {
-        overflow: hidden;
-        position: absolute;
-        width: 100%;
-        height: 100vh;
-        background-image: url('../media/adminIndexBackground.jpg');
-        background-position: center;
-        background-color: #000;
-        background-size: cover;
-        filter: brightness(.6);
-    }
 }
 
-#authForm {
+#registerForm {
     padding: 20px;
     width: 300px;
     font-size: 1rem;
@@ -33,7 +21,7 @@
 
     input {
         width: 90%;
-        margin: 10px 0 10px 0;
+        margin: 10px 0 40px 0;
         padding: 10px 5%;
         border: none;
         border-bottom: 1px solid #bebebe;
@@ -42,8 +30,23 @@
         transition: .3s;
 
         &#loginInput {
-            margin: 10px 0 40px 0;
+            
         }
+
+        &:focus {
+            border-bottom: 1px solid #000;
+        }
+    }
+
+    select {
+        width: 100%;
+        margin: 10px 0 10px 0;
+        padding: 10px 5%;
+        border: none;
+        border-bottom: 1px solid #bebebe;
+        background: transparent;
+        outline: none;
+        transition: .3s;
 
         &:focus {
             border-bottom: 1px solid #000;
@@ -73,11 +76,5 @@
             text-align: center;
             margin: 0;
         }
-    }
-}
-
-@media only screen and (max-width : 400px) {
-    #authForm {
-        width: 200px;
     }
 }
