--- a/public/styles/scss/main/index.scss
+++ b/public/styles/scss/main/index.scss
@@ -58,7 +58,7 @@
 
         p {
             text-align: center;
-            font-size: 0.95rem;
+            font-size: .95rem;
             margin: 0 0 16px;
         }
 
