--- a/public/styles/scss/admin/adminMenu.scss
+++ b/public/styles/scss/admin/adminMenu.scss
@@ -88,7 +88,7 @@ menu {
           color: #000;
           width: auto;
           user-select: none;
-          font-size: .9rem;
+          font-size: 1rem;
           font-weight: 300;
           transition: .2s;
       
