--- a/public/styles/scss/main/basic.scss
+++ b/public/styles/scss/main/basic.scss
@@ -16,9 +16,51 @@
 body {
   font-size  : 1rem;
   line-height: 1;
+  overflow: hidden;
+
+  &.ready {
+    overflow: visible;
+  }
 
   &.blocked {
     overflow: hidden;
+  }
+}
+
+#preloaderWrapper {
+  z-index: 9999;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: #fff;
+  transition: .3s;
+
+  &.hidden {
+    display: none;
+  }
+
+  #preloader {
+    height: 30px;
+    width: 30px;
+    margin: 40vh auto;
+    border: 5px solid rgba($color: $mc, $alpha: .45);
+    border-top: 5px solid rgba($color: $mc, $alpha: 1.0);
+    border-radius: 50%;
+    animation: rotate 1s infinite linear;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
