--- a/public/styles/scss/main/menu.scss
+++ b/public/styles/scss/main/menu.scss
@@ -1,7 +1,7 @@
 @import '../variables.scss';
 
 menu {
-    z-index   : 9999;
+    z-index   : 9990;
     position  : fixed;
     top       : 0;
     width     : 90%;
@@ -55,7 +55,7 @@ menu {
           color: #000;
           width: auto;
           user-select: none;
-          font-size: 1rem;
+          font-size: .9rem;
           font-weight: 300;
           transition: .2s;
       
