--- a/public/styles/scss/main/article.scss
+++ b/public/styles/scss/main/article.scss
@@ -106,22 +106,17 @@
         padding: 20px 0;
 
         a {
-            display: flex;
-            align-items: center;
-            justify-content: center;
             margin: 0 20px 0 0;
+            padding: 5px 10px;
+            background: #e9e9e9;
+            color: #000;
             text-decoration: none;
             font-style: normal;
             font-weight: 400;
-            background-image: linear-gradient($mc, $mc);
-            background-position: 0% 100%;
-            background-repeat: no-repeat;
-            background-size: 0% 3px;
-            line-height: 20px;
-            transition: background-size .3s;
+            transition: .3s;
 
             &:hover {
-                background-size: 100% 3px;
+                background: #dadada;
             }
         }
     }
@@ -139,7 +134,7 @@
         }
 
         footer {
-            border-top: 1px solid #8f8f8f;
+            border-top: 1px solid #bebebe;
             margin: 0 20px;
             padding: 20px 0;
         }
