--- a/public/styles/scss/main/gallery.scss
+++ b/public/styles/scss/main/gallery.scss
@@ -77,15 +77,16 @@
 }
 
 @media only screen and (max-width : 400px) {
-    #wrapper {
-      margin: 50px 10%;
-    }
-  
-    .sizer {
-      width: 100%;
-    }
-  
-    .item-masonry {
-      margin: 0 0 5px 0;
-    }
+  #wrapper {
+    margin: 50px 0 0;
   }
+
+  .sizer {
+    width: 100%;
+  }
+
+  .item-masonry {
+    vertical-align: middle;
+    margin: 0;
+  }
+}
